fixed text align on mobile home

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -10,6 +10,14 @@
 	}
 }
 
+h1.headline,
+h2.get-informed {
+	@include media-query($on-palm) {
+		text-align: left;
+	}
+}
+
+
 .ctas {
 	
 	h2 {
